8383658: [lworld] Add value class test coverage to java.util.Collections
Reviewed-by: liach, lmesnik